# Arcee-Mini-Kernel

./: .env.example  .gitignore  AGENTS.md  SETUP_COMMANDS.md  benchmark_results_20.json  correct_traces.json  modal_app.py  multi_turn_queue.py  orchestrator.py  pyproject.toml  reasoning_traces_glm45_correct.json  reasoning_traces_glm45_multiturn.json  reasoning_traces_qwen3_multiturn.json  reasoning_traces_qwen3_multiturn_failed.json  run_gpt_oss.sh  serve_qwen3_235b.sh  utilities.py
analysis_multiturn/: analyze_traces.py  journey.txt  kernel_journey.py
exploration/: benchmark_example.py  pyproject.toml
inference/: download_model_from_modal.py  pyproject.toml  serve_trinity.sh
nemotron-finetuning/: AGENTS.md  main.py  pyproject.toml  serve.py  test_server.py
sft-reasoning/: .env.example  .gitignore  README.md  arcee-trinity-mini-sft.ipynb  trinity_inference.py  trinity_load_modal.py
