[project]
name = "nemotron-finetuning"
version = "0.1.0"
description = "Finetuning pipeline for NVIDIA Nemotron-3-Nano-30B-A3B on Triton kernel generation"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "vllm>=0.12.0",
    "transformers",
    "torch",
    "openai",
    "huggingface-hub",
]

[project.scripts]
serve = "serve:main"
